[package]
name = "xlog-solve"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
keywords.workspace = true
description = "Solver services used by XLOG exact inference and verification layers"
documentation = "https://docs.rs/xlog-solve"
readme = "../../README.md"

[dependencies]
xlog-core.workspace = true
xlog-cuda.workspace = true
xlog-runtime.workspace = true
cudarc.workspace = true

[dev-dependencies]
criterion = "0.8"
xlog-ir.workspace = true
xlog-logic.workspace = true

[[bench]]
name = "solver_bench"
harness = false
