[package]
name = "xlog-solve"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
keywords.workspace = true
description = "Solver services used by XLOG exact inference and verification layers"
documentation = "https://docs.rs/xlog-solve"
readme = "../../README.md"

[dependencies]
xlog-core.workspace = true
xlog-cuda.workspace = true
xlog-runtime.workspace = true
cudarc.workspace = true

[dev-dependencies]
criterion = "0.5"
# Path-only (no version) dev-deps: keeps publish ordering robust by
# omitting these from the packaged manifest (cargo drops version-less
# dev-dependencies). In-workspace tests/benches still resolve via path.
xlog-ir = { path = "../xlog-ir" }
xlog-logic = { path = "../xlog-logic" }

[[bench]]
name = "solver_bench"
harness = false
