[package]
name = "xlog-stats"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
keywords.workspace = true
description = "Runtime statistics and optimizer feedback utilities for XLOG"
documentation = "https://docs.rs/xlog-stats"
readme = "../../README.md"

[dependencies]
xlog-core.workspace = true

[dev-dependencies]
criterion = "0.8"

[[bench]]
name = "stats_bench"
harness = false
